[project]
name = "binpack"
version = "0.0.1"
authors = [
  { name="Ziqi Wang", email="ziqiw@ust.hk" },
]
dependencies = [
    "pytest >= 8.3.0",
    "trimesh >= 4.6.4",
    "scipy >= 1.15.2",
    "polyscope >= 2.3.0",
    "hatchling >= 1.27.0",
    "shapely >= 2.1.1",
    "py3dbp == 1.1.2",
    "networkx",
    "Pillow"
]

description = "A package for conducting research using robots for assembly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binpack"]


[project.urls]
Homepage = "https://github.com/kiki007/binpack"
Issues = "https://github.com/kiki007/binpack/issues"